--- a/public/my-project/index.css
+++ b/public/my-project/index.css
@@ -14,39 +14,27 @@ body {
 }
 
 .navbar {
+    
     display: flex;
     position: fixed;
     top: 0;
     position: fixed;
-    top: 0;
-    z-index: 1000;
-    justify-content: center; 
     justify-content: center; 
     align-items: center;
     background-color: #e4e4e4b6;
-    padding: .5rem 0; 
+    padding: 0.5rem 0; 
     box-shadow: 0 2px 8px rgba(0,0,0,0.15);
     backdrop-filter: blur(16px);
     border-bottom: #a0a0a036 3px solid;
-
-    width: 100%;
-    left: 0;
-} 
-
-.nav-container {
-    max-width: 1000px;
-    width: 100%;
+    
+      width: 100%;
     margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative; 
-    padding: 0 .25rem; 
 }
 
 .nav-name {
     font-size: 1.2rem;
-    margin: .5rem;
+    margin-right: calc(5rem + 2dvh);
+
 }
 .nav-col-box {
     width: 39px;
@@ -104,37 +92,9 @@ body {
         align-items: flex-start;
     }
 
-    .toggle-button {
-        display: flex;
-    }
-
-    .navbar-links {
-        display: none;
-        width: 100%;
-    }
-
-    .navbar-links ul {
-        width: 100%;
-        flex-direction: column;
-    }
-
-    .navbar-links ul li {
-        text-align: center;
-    }
-
-    .navbar-links ul li a {
-        padding: .5rem 1rem;
-    }
-
-    .navbar-links.active {
-        display: flex;
-    }
-}
-
-@media (max-width: 300px) {
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
+    .nav-col-box {
+        margin-top: 8px;
+        margin-left: 0.2rem;
     }
 
     .toggle-button {
@@ -157,12 +117,15 @@ body {
 
     .navbar-links ul li a {
         padding: .5rem 1rem;
+        top: 16px;
     }
 
     .navbar-links.active {
         display: flex;
     }
 }
+
+
 
 /*content*/
 .content {
