--- a/public/my-project/index.css
+++ b/public/my-project/index.css
@@ -12,7 +12,7 @@ body {
     padding: 0;
     font-family: 'IBM Plex Mono', monospace;
 }
-
+/*navbar*/
 .navbar {
     
     display: flex;
@@ -20,11 +20,11 @@ body {
     top: 0;
     justify-content: center; 
     align-items: center;
-    background-color: #e4e4e4b6;
+    background-color: #e4e4e483;
     padding: 0.5rem 0; 
     box-shadow: 0 2px 8px rgba(0,0,0,0.15);
     backdrop-filter: blur(16px);
-    border-bottom: #a0a0a036 3px solid;
+    border-bottom: #4f4f4f36 1.5px solid;
     
       width: 100%;
     margin: 0 ;
@@ -32,7 +32,7 @@ body {
 
 .nav-name {
 font-size: 1.1rem;
-margin-right: clamp(1rem, 5vw + 2vh, 6rem);
+margin-right: clamp(1rem, 5vw + 1vh, 6rem);
 
 }
 .nav-col-box {
@@ -124,15 +124,26 @@ margin-right: clamp(1rem, 5vw + 2vh, 6rem);
     }
 }
 
-
+/*elements asset*/
+.frosted {
+    background-color: #92929242;
+    backdrop-filter: blur(32px);
+    border-radius: 32px;
+    border: 1px solid #dddddd;
+}
 
 /*content*/
 .content {
     flex-shrink: 0;
 }
+/*
+.margin-add {
+        margin-bottom: 0.5rem;
+}
+*/
 .s1 {
-    background-image:
-      url('media/bg3.png');
+    background: linear-gradient(to bottom, #28282800, #28282800, #28282800, #0b0b0b),
+      url('media/bg1.png');
 background-position: center;
     background-size: cover;
     background-attachment: scroll;
@@ -143,36 +154,132 @@ background-position: center;
      flex-direction: column; /* changed: stack heading + icon vertically */
     align-items: center;  
     justify-content: center;
+    margin-bottom: -1rem;
+}
+
+.s1 h1 {
+    color: white;
+    font-size: clamp(2rem, 3rem + 1vw, 4rem);
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+    margin-top: 35rem;
+    text-align: center;
+}
+
+#program {
+    background: linear-gradient(to right,#f4f4f4, #F78104);
+    color: transparent;
+    background-clip: text;
+    font-weight: normal;
+    text-align: center;
+    margin-top: -2rem;
+    text-shadow: 1px 1px 4px #F78104b3;
+       font-size: clamp(1rem, 1.5rem + 0.5vw, 2rem);
+}
+
+#pkw-txt {
+   color: #9BA7FF;
+   font-size: clamp(1rem, 1.5rem + 0.5vw, 2rem);
+   font-weight: normal;
+   margin-top: -1.5rem;
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
 }
 
 .s2 {
     height: 100dvh;
     width: 100%;
-    background-color: #6474a5;
-    margin-top: 0.5rem;
+    background: linear-gradient(#2C3A6F, #6474A5);
+}
+
+.s2 h1 {
+    text-align: center;
+    color: white;
+    padding-top: 8.5vh;
+}
+
+.pro-con {
+      height: clamp(60vh, 75vh + 6vw, 75vh);
+    width: clamp(60vw, 80vw + 2vw, 75vw);
+    margin: 0 auto;
+}
+.container {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: flex-start;
+    flex-direction: row;
+}
+
+.container img {
+      aspect-ratio: 3 / 4;
+    width: clamp(8rem, 14rem + 1vw, 20rem);
+    border-radius: 16px;
+     box-shadow: 1px 1px 12px #00000044;
+     margin: 4rem 4rem 0 2rem;
+     border: 1px solid #ffffff;
+}
+
+.container p {
+    text-indent: calc(2rem + 1vw);
+    color: white;
+    font-size: clamp(0.2rem, 0.4rem + 1vw, 1.5rem);
+    font-weight: 350;
+    line-height: clamp(1, 1.2);
+    margin-left: clamp(2rem, 4rem + 1vw, 6rem);
+    margin-top: clamp(1rem, 2rem, 3rem);
+    text-align: left;
 
 }
 
+@media (max-width: 990px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container img, .container p {
+        margin: 1rem 0;
+    }
+
+    .container p {
+        text-indent: 0;
+        text-align: center;
+        margin: 0 1rem 0 1rem ;
+    }
+}
+
+.pro-con h5 {
+    color: white;
+    font-size: clamp(0.5rem, 1rem + 0.5vw, 1.5rem);
+    text-align: center;
+    margin-top: 2rem;
+    font-weight: 600;
+}
 
 .s3 {
     height: 100dvh;
     width: 100%;
-    background-color: #a5b3c9;
-    margin-top: 0.5rem;
+    background: linear-gradient(#6474A5, #A5B3C9);
 }
 
 .s4 {
     height: 100dvh;
     width: 100%;
-    background-color: #c9d0da;
-    margin-top: 0.5rem;
-
+    background: linear-gradient(#A5B3C9, #c9d0da);
 }
 
 .s5 {
     height: 100dvh;
     width: 100%;
-    background-color: #e4e4e4;
-    margin-top: 0.5rem;
+    background: linear-gradient(#c9d0da, #e4e4e4);
+}
 
+.footer {
+    height: 60px;
+    width: 100%;
+    background-color: #282828;
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    justify-content: center; 
+    align-items: center;
+    color: white;
 }
