--- a/public/my-project/index.css
+++ b/public/my-project/index.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: ;
+    box-sizing: border-box;
 }
 html{
       font-size: calc(60% + 0.8vmin);
