--- a/public/my-project/index.css
+++ b/public/my-project/index.css
@@ -1,5 +1,10 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
-html{
+html {
       font-size: calc(60% + 0.8vmin);
       scroll-behavior: smooth;
 }
@@ -18,7 +23,8 @@ body {
     top: 0;
     justify-content: center; 
     align-items: center;
-    background-color: #e3e3e3;
+    background-color: #e3e3e3ce;
+    backdrop-filter: blur(100px);
     padding: 0.1rem 0; 
       width: 100%;
     margin: 0 ;
@@ -29,6 +35,7 @@ font-size: 1.1rem;
 margin-right: clamp(1rem, 5vw + 1vh, 6rem);
 color: #282828;
 }
+
 .nav-col-box {
     width: 39px;
     height: 15px;
@@ -68,8 +75,8 @@ color: #282828;
     display: none;
     flex-direction: column;
     justify-content: space-between;
-    width: 24px;
-    height: 15px;
+    width: 25px;
+    height: 16px;
 }
 
 .toggle-button .bar {
@@ -154,15 +161,14 @@ color: #282828;
     color: #e4e4e4 ;
 }
 #mip {
-    font-size: 1rem;
+    font-size: 1.7rem;
     text-align: center;
     color:#282828 ;
 }
 #pkw-txt {
-     font-size: 1rem;
+     font-size: 2rem;
     text-align: center;
     color: #3F5F76 ;
-    margin-top: -0.5vh;
 }
 
 .page-2 {
@@ -170,13 +176,14 @@ color: #282828;
     width: 100%;
     background-color: #7E9EB2;
     position: relative;
-    top: -0.7rem;
+    top: .2rem;
 }
 
 .page-2 h2 {
     text-align: center;
     padding-top: 4rem;
     color: #ffffff;
+    padding-bottom: 1rem;
 }
 
 .page-2 p {
@@ -186,6 +193,7 @@ color: #282828;
     text-indent: 2em;
     color: #ffffff;
     padding-left: 1em;
+    padding-right: 1em;
 }
 
 
@@ -210,9 +218,25 @@ max-width: 25%;
   flex: 1 1 200px;
 }
 
+#nav-btn-page-2 {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+    transform: scale(1.5);
+    backdrop-filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.1));
+    text-decoration: none;
+}
+
+.page-3 {
+    height: 100dvh;
+    width: 100%;
+    background-color: #f5f5f5;
+}
 /*footer*/  
 .footer {
-    height: 60px;
+    height: 3em;
     width: 100%;
     background-color: #282828;
     display: flex;
